--- a/fstu-frontend/public/index.html
+++ b/fstu-frontend/public/index.html
@@ -5,6 +5,52 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+<meta
+  http-equiv="Content-Security-Policy"
+  content="
+    default-src 'self';
+
+    script-src 
+      'self' 
+      'unsafe-inline' 
+      'unsafe-eval';
+
+    style-src 
+      'self' 
+      'unsafe-inline';
+
+    style-src-elem 
+      'self' 
+      'unsafe-inline';
+
+    img-src 
+      'self' 
+      data: 
+      blob:
+      https://images.unsplash.com
+      https://static.akadem.uz;
+
+    font-src 
+      'self' 
+      data:;
+
+    connect-src 
+      'self' 
+      ws: 
+      http://localhost:* 
+      https:;
+
+    frame-src 
+      'self';
+
+    object-src 'none';
+    base-uri 'self';
+    form-action 'self';
+  "
+/>
+
+
+
     <meta
       name="description"
       content="Web site created using create-react-app"
